welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
      c=Test();
            ^SnakeBuggle:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:27: warning: enclosing method Test has result type Unit: return value discarded
      return true
      ^SnakeBuggle:34: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^SnakeBuggle:34: warning: enclosing method Test has result type Unit: return value discarded
    return true
    ^SnakeBuggle:37: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:37: warning: enclosing method Test has result type Unit: return value discarded
  return false
  ^